--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,29 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "tailwindcss/variants";
+
+@layer base {
+  [type='text'],
+  [type='email'],
+  [type='url'],
+  [type='password'],
+  [type='number'],
+  [type='date'],
+  [type='datetime-local'],
+  [type='month'],
+  [type='search'],
+  [type='tel'],
+  [type='time'],
+  [type='week'],
+  [multiple],
+  textarea,
+  select {
+    @apply bg-white dark:bg-neutral-900 border-neutral-200 dark:border-neutral-700 rounded-full focus:ring-indigo-500 
+    focus:border-indigo-500 block w-full sm:text-sm text-neutral-900 dark:text-neutral-200;
+  }
+}
+
 @import './_theme_colors';
 @import './_theme_font';
 @import './_theme_custom';
