--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-@import "tailwindcss/variants";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import 'tailwindcss/variants';
 
 @layer base {
   [type='text'],
@@ -29,3 +29,5 @@
 @import './_theme_custom';
 
 @import './header';
+
+@import 'node_modules/@glidejs/glide/src/assets/sass/glide.core';
